# gc-finder-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: deploy.yml  migrate.yml  seed.yml  tests.yml
alembic/: env.py
alembic/versions/: 1c5ea8f384b1_create_leader_contacts_table_and_remove_.py  6035bd9163df_add_display_name_to_leaders_and_create_.py  8a4b2b1d9f3c_make_refresh_tokens_timestamps_timezone_.py  fad3d8ca2b12_create_all_tables.py
app/: config.py  database.py  dependencies.py  logging_config.py  main.py
app/models/: __init__.py  gc.py  gc_leader.py  gc_media.py  gc_meeting.py  leader.py  leader_contact.py  refresh_token.py  user.py
app/repositories/: gc_repository.py  leader_repository.py  user_repository.py
app/routers/: auth.py  gc_image_import.py  gc_medias.py  gc_meetings.py  gcs.py  health.py  leaders.py  public.py  stats.py  users.py
app/schemas/: auth.py  common.py  gc.py  gc_image_import.py  gc_media.py  gc_meeting.py  leader.py  public.py  stats.py  user.py
app/services/: auth_service.py  gc_image_import_service.py  gc_image_save_service.py  gc_service.py  geocoding_service.py  google_forms_service.py  image_parser_service.py  leader_service.py  ocr_service.py  user_service.py
app/services/ocr/: __init__.py  base.py  easyocr_service.py  (+3 more)
app/utils/: cep.py  security.py
seeds/: run_seeds.py  seed_gc_medias.py  seed_gc_meetings.py  seed_gcs.py  seed_leaders.py  seed_users.py
tests/: conftest.py  test_gc_image_import_validation.py  test_gc_link_leader.py  test_gc_update_address_validation.py
tests/integration/: conftest.py  test_auth_integration.py  test_gc_medias_integration.py  test_gc_meetings_integration.py  test_gcs_integration.py  test_health_integration.py  test_leaders_integration.py  test_public_integration.py  test_stats_integration.py  test_users_integration.py
tests/unit/: test_database.py
(+38 files in other folders)
