[tool.poetry]
name = "gc-finder-api"
version = "0.1.0"
description = "API REST para localização de Grupos de Crescimento (GCs)"
authors = []
packages = [
    { include = "app" },
    { include = "seeds" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = { version = ">=0.115.0", extras = ["standard"] }
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
sqlalchemy = { version = ">=2.0.0", extras = ["asyncio"] }
asyncpg = ">=0.30.0"
alembic = ">=1.14.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-jose = { version = ">=3.3.0", extras = ["cryptography"] }
bcrypt = ">=4.0.0"
httpx = ">=0.27.0"
redis = ">=5.0.0"
python-multipart = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
aiosqlite = ">=0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
